<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.alumno.myapplication.MainActivity">

    <Button
        android:text="@string/btn_alta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonAlta"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/btn_visualizacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonVer"
        android:layout_below="@+id/buttonAlta"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/btn_borrado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonBorrar"
        android:layout_below="@+id/buttonVer"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/btn_salir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonBorrar"
        android:id="@+id/buttonSalir"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:srcCompat="@drawable/agenda"
        android:id="@+id/imageView2"
        android:layout_above="@+id/buttonAlta"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="17dp" />


</RelativeLayout>
