<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_alta_asig"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.alumno.myapplication.AltaAsigActivity">

    <!-- Botones Cancelar - Aceptar -->

    <Button
        android:text="@string/btn_aceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_aceptar"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="13dp" />

    <Button
        android:text="@string/btn_cancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_cancelar"
        android:layout_alignBaseline="@+id/btn_aceptar"
        android:layout_alignBottom="@+id/btn_aceptar"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="14dp" />

    <TextView
        android:text="@string/desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_below="@+id/etNombre"
        android:layout_alignStart="@+id/etNombre"
        android:layout_marginTop="32dp" />

    <TextView
        android:text="@string/txtNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/btn_aceptar" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text=""
        android:ems="10"
        android:id="@+id/etNombre"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/textView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text=""
        android:ems="10"
        android:id="@+id/etDescripcion"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/textView2" />


</RelativeLayout>
